--- a/style.css
+++ b/style.css
@@ -11,11 +11,12 @@ body {
 	background-color: #000000;
 }
 
+
+/*------------ header start --------------*/
 h1 {
 	font-size: 4rem;
 }
 
-/*------------ Navbar start --------------*/
 .navbar-expand .navbar-nav .nav-link {
 	padding-inline: 3rem;
 	color: #fff;
@@ -23,7 +24,7 @@ h1 {
 	font-family: "Bebas Neue", sans-serif;
 	font-weight: 400;
 	font-style: normal;
-	font-size: 1.8rem;
+	font-size: 1.5rem;
 	text-transform: uppercase;
 }
 
@@ -31,7 +32,40 @@ h1 {
 	color: #fff;
 	background-color: #777777;
 }
-/*----------- Navbar end ------------------*/
+
+@media screen and (width < 1400px) {
+	h1 {
+		font-size: 3rem;
+	}
+
+	.navbar-expand .navbar-nav .nav-link {
+		font-size: 1.2rem;
+		padding-inline: 2rem;
+	}
+}
+
+@media screen and (width < 992px) {
+	h1 {
+		font-size: 2rem;
+	}
+
+	.navbar-expand .navbar-nav .nav-link {
+		font-size: 1rem;
+		padding-inline: 1.5rem;
+	}
+}
+
+@media screen and (width < 768px) {
+	h1 {
+		font-size: 1.5rem;
+	}
+
+	.navbar-expand .navbar-nav .nav-link {
+		font-size: .9rem;
+		padding-inline: .8rem;
+	}
+}
+/*----------- header end ------------------*/
 
 
 /*----------- Gallery Grid start ----------------*/
@@ -42,6 +76,7 @@ h1 {
 	place-items: start;
 	place-content: center;
 	gap: 2rem;
+	/* border: 1px solid #fff; */
 }
 
 .gallery-grid .gallery-item {
