--- a/style.css
+++ b/style.css
@@ -75,7 +75,6 @@ h1 {
 	grid-auto-rows: 400px;
 	place-items: start;
 	gap: 2rem;
-	/* border: 1px solid #fff; */
 }
 
 .gallery-grid .gallery-item {
@@ -87,12 +86,59 @@ h1 {
 	width: 100%;
 	height: 100%;
 	object-fit: contain;
+	cursor: pointer;
+	transition: .2s ease-in-out scale;
+}
+
+.gallery-grid .gallery-item img:hover {
+	scale: 1.02;
 }
 
 .gallery-grid .gallery-item:nth-of-type(odd) {
 	place-self: end;
 }
 /*----------- Gallery Grid end ------------------*/
+
+/*----------- Gallery Item Large Start ------------------*/
+.gallery-item-large {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform-origin: center;
+	transform: translate(-140%, -50%) scale(0);
+	height: 100vh;
+	width: 100vw;
+	visibility: hidden;
+	opacity: 0;
+}
+
+.gallery-item-large.active {
+	visibility: visible;
+	opacity: 1;
+	animation: enlarge 2s ease-in-out forwards;
+}
+
+.gallery-item-large img {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+}
+
+@keyframes enlarge {
+	0% {
+		transform: translate(-140%, -50%) scale(0);
+	}
+
+	75% {
+		transform: translate(-50%, -50%) scale(1.1);
+	}
+
+	100% {
+		transform: translate(-50%, -50%) scale(1);
+	}
+}
+
+/*----------- Gallery Item Large End ------------------*/
 
 /*----------- Pagination start ------------------*/
 .pagination {
