--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ h1 {
 	width: auto;
 }
 
-.gallery-grid .gallery-item img {
+.gallery-grid .gallery-item > img {
 	width: 100%;
 	height: 100%;
 	object-fit: contain;
@@ -90,7 +90,7 @@ h1 {
 	transition: .2s ease-in-out scale;
 }
 
-.gallery-grid .gallery-item img:hover {
+.gallery-grid .gallery-item > img:hover {
 	scale: 1.02;
 }
 
