--- a/style.css
+++ b/style.css
@@ -110,12 +110,27 @@ h1 {
 	width: 100vw;
 	visibility: hidden;
 	opacity: 0;
+	transition: opacity 0.6s ease-in-out, visibility 0.6s ease-in-out, background-color 0.6s 1s ease-in-out;
 }
 
-.gallery-item-large.active {
+.gallery-item-large.show {
+	background-color: #000000b3;
+}
+
+.gallery-grid .gallery-item:nth-of-type(odd) .gallery-item-large.show {
 	visibility: visible;
 	opacity: 1;
-	animation: enlarge 1.6s ease-in-out forwards;
+	animation: enlargeLeft 1.6s ease-in-out forwards;
+}
+
+.gallery-grid .gallery-item:nth-of-type(even) .gallery-item-large.show {
+	visibility: visible;
+	opacity: 1;
+	animation: enlargeRight 1.6s ease-in-out forwards;
+}
+
+.gallery-item-large.hide {
+	animation: shrink 1.6s ease-in-out forwards;
 }
 
 .gallery-item-large img {
@@ -124,7 +139,7 @@ h1 {
 	object-fit: contain;
 }
 
-@keyframes enlarge {
+@keyframes enlargeLeft {
 	0% {
 		transform: translate(-140%, -50%) scale(0);
 	}
@@ -137,6 +152,75 @@ h1 {
 		transform: translate(-50%, -50%) scale(1);
 	}
 }
+
+@keyframes enlargeRight {
+	0% {
+		transform: translate(140%, -50%) scale(0);
+	}
+
+	75% {
+		transform: translate(-50%, -50%) scale(1.1);
+	}
+
+	100% {
+		transform: translate(-50%, -50%) scale(1);
+	}
+}
+
+@keyframes shrink {
+	0% {
+		transform: translate(-50%, -50%) scale(1);
+	}
+
+	75% {
+		transform: translate(-50%, -50%) scale(1.1);
+	}
+
+	100% {
+		transform: translate(-140%, -50%) scale(0);
+	}
+}
+
+.gallery-item-large .close-btn {
+	position: absolute;
+	top: 2rem;
+	right: 2rem;
+	visibility: hidden;
+	opacity: 0;
+	width: 30px;
+	height: 30px;
+	cursor: pointer;
+	transition: 0.5s ease 2s visibility, 0.5s ease 2s opacity, 0.5s ease tranform;
+	transition-property: visibility, opacity, transform;
+}
+
+.gallery-item-large .close-btn:hover {
+	transform: rotate(-90deg);
+}
+
+.gallery-item-large.show .close-btn {
+	visibility: visible;
+	opacity: 1;
+}
+
+.gallery-item-large .close-btn span {
+	position: absolute;
+	top: .8rem;
+	width: 100%;
+	height: 3px;
+	background-color: #fff;
+	border-radius: 2px;
+	transition: 0.3s ease;
+}
+
+.gallery-item-large .close-btn span:first-child {
+	transform: rotate(45deg);
+}
+
+.gallery-item-large .close-btn span:last-child {
+	transform: rotate(-45deg);
+}
+
 
 /*----------- Gallery Item Large End ------------------*/
 
