--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ h1 {
 .gallery-grid .gallery-item > img {
 	width: 100%;
 	height: 100%;
-	object-fit: contain;
+	object-fit: cover;
 	cursor: pointer;
 	transition: .2s ease-in-out scale;
 }
