--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h1 {
 .gallery-grid {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	grid-auto-rows: 400px;
+	grid-auto-rows: 300px;
 	place-items: start;
 	gap: 2rem;
 }
@@ -85,7 +85,8 @@ h1 {
 .gallery-grid .gallery-item > img {
 	width: 100%;
 	height: 100%;
-	object-fit: cover;
+	object-fit: contain;
+	/* object-position: left; */
 	cursor: pointer;
 	transition: .2s ease-in-out scale;
 }
